--- a/css/dark_mode_sass.scss
+++ b/css/dark_mode_sass.scss
@@ -1,4 +1,5 @@
-
+$base_font: 'Titillium Web', sans-serif;
+$base_color: #4162f6;
 body{
     margin: 0px;
     padding: 0px;
@@ -63,50 +64,41 @@ body{
     padding: 9px;
     border-radius: 3px;
     text-align: center;
-    background-color: #25273c;
-   
-}
-
-.container__add-to-do i {
-    position: relative;
-    font-size: 26px;
-    color: #85538a;
-    
-}
-
-.container__add-to-do input {
-    position: relative;
-    width: 264px;
-    padding: 5px;
-    border: none;
-    background-color:  	#25273c;
-    color: #cacde8;
-}
-
-.container__add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    padding: 5px;
-    color: #cacde8;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 15px;
-    
-}
-
-.container__add-to-do input::-moz-placeholder { /* Firefox 19+ */
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
-}
-
-.container__add-to-do input:-ms-input-placeholder { /* IE 10+ */
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
-}
-
-.container__add-to-do input:-moz-placeholder { /* Firefox 18- */
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
+    background-color: #25273c; 
+    i {
+        position: relative;
+        font-size: 26px;
+        color: #85538a;
+        input {
+            position: relative;
+            width: 264px;
+            padding: 5px;
+            border: none;
+            background-color:  	#25273c;
+            color: #cacde8;
+            input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+                padding: 5px;
+                color: #cacde8;
+                font-family:$base_font;
+                font-size: 15px;
+                input::-moz-placeholder { /* Firefox 19+ */
+                    color: $base_color;
+                    font-family: $base_font;
+                    font-size: 20px;
+                    input:-ms-input-placeholder { /* IE 10+ */
+                        color: $base_color;
+                        font-family: $base_font;
+                        font-size: 20px;
+                        input:-moz-placeholder { /* Firefox 18- */
+                            color: $base_color;
+                            font-family: $base_font;
+                            font-size: 20px;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 .item{
@@ -262,14 +254,12 @@ font-weight: bold;
 .container__head{
     width: 380px;
 }
-.list__add-to-do{
+.lits__add-to-do{
     width: 354px;
+    input {
+        width: 300px;
+    }
 }
-
-.list__add-to-do input {
-    width: 300px;
-}
-
 .item{
     width: 380px;
 }
