--- a/css/light_mood.scss
+++ b/css/light_mood.scss
@@ -1,3 +1,5 @@
+$base_font: 'Titillium Web', sans-serif;
+$base_color: #4162f6;
 body{
     margin: 0px;
     padding: 0px;
@@ -66,44 +68,38 @@ body{
     border-radius: 3px;
     text-align: center;
     background-color: white;
-}
-
-.container__add-to-do i{
-    position: relative;
-    font-size: 26px;
-    color: #85538a;;
-}
-
-.container__add-to-do input {
-    position: relative;
-    width: 264px;
-    padding: 5px;
-    border: none;
-}
-
-.container__add-to-do input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    padding: 5px;
-    color: #6a708a;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 15px;
-}
-
-.container__add-to-do input::-moz-placeholder { /* Firefox 19+ */
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
-}
-
-.container__add-to-do input:-ms-input-placeholder { /* IE 10+ */
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
-}
-
-.container__add-to-do input:-moz-placeholder { /* Firefox 18- */
-    color: #4162f6;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
+    i{
+        position: relative;
+        font-size: 26px;
+        color: #85538a;;
+        input {
+            position: relative;
+            width: 264px;
+            padding: 5px;
+            border: none;
+            input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+                padding: 5px;
+                color: #6a708a;
+                font-family: $base_font;
+                font-size: 15px;
+                input::-moz-placeholder { /* Firefox 19+ */
+                    color: $base_color;
+                    font-family: $base_font;
+                    font-size: 20px;
+                    input:-ms-input-placeholder { /* IE 10+ */
+                        color: $base_color;
+                        font-family: $base_font;
+                        font-size: 20px;
+                        input:-moz-placeholder { /* Firefox 18- */
+                            color: $base_color;
+                            font-family: $base_font;
+                            font-size: 20px;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 .item{
@@ -251,12 +247,10 @@ font-weight: bold;
 }
 .lits__add-to-do{
     width: 354px;
+    input {
+        width: 300px;
+    }
 }
-
-.lits__add-to-do input {
-    width: 300px;
-}
-
 .item{
     width: 380px;
 }
